--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,6 @@
         "twig/twig": "^1.24",
         "latte/latte": "^2.3",
         "smarty/smarty": "^3.1",
-        "dwoo/dwoo": "2.0b1"
+        "dwoo/dwoo": "1.3.0"
     }
 }
